# motor

./: .clang-format  CMakeLists.txt
cmake/: motor-module.cmake  motor-utils.cmake
code/: CMakeLists.txt
code/client/: CMakeLists.txt
code/client/main/: CMakeLists.txt
code/core/: CMakeLists.txt
code/editor/main/: CMakeLists.txt
code/renderer/renderer/: CMakeLists.txt
code/renderer/renderer/src/: main.cpp
code/server/main/: CMakeLists.txt
content/models/: cube.fbx  cylinder.fbx  plane.fbx  sphere.fbx
tools/cmake/: index.cmake  motor_add_subdirectories.cmake
tools/cmake/platform/: detect_linux.cmake  detect_uwp.cmake  detect_win.cmake  index.cmake
